--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <meta name="apple-mobile-web-app-title" content="FlutterSamples">
   <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
+  <!-- Fav icon -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <title>FlutterSamples</title>
   <link rel="manifest" href="/manifest.json">
 </head>
