Update flutter and fix search issue

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="FlutterSamples">
+  <meta name="apple-mobile-web-app-title" content="flutter_samples">
   <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
   <!-- Fav icon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <title>FlutterSamples</title>
+  <title>flutter_samples</title>
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
